assets/styles/partials/_banner.scss
.section-banner {
	position: relative;
	display: table;
	width: 100%;
	margin: 0 auto;
	text-align: center;
	height: 100vh;
	color: $color-orange-alpha;
	overflow: hidden;
	@include overlay($color-dark, 0.8);
	.v-center {
		display: table-cell;
		position: relative;
		vertical-align: middle;
		z-index: 4;
                .slide {
                        text-transform: uppercase;
                        font-family: Lato;
                        font-weight: 100;
			font-size: 36px;
                        font-size: calc(1.75em + 50%);
			line-height: 44px;
                        line-height: calc(2.00em + 50%);
                        color: $color-light;
			width: 90vw;
			margin-left: -35vw;
                }
                .move-up {
			position: absolute;
                        @include animation(move-up ease-out 9s infinite forwards);
                }
                .move-down {
			position: absolute;
                        @include animation(move-down ease-out 9s infinite forwards);
                }
	}
 	ul.keyframe-slider {
		li {
			@include bg-abs;
			opacity: 0;
			@include animation(fade-out 9s infinite both);
			background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whiteheads-800x1200px.jpeg);
			@media (min-width: $mq-med) {
				background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whiteheads-2000x1350px.jpeg);
			}
		}
	 	li:nth-child(2) {
			background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/trapped-800x1200px.jpeg);
			@include animation-delay(6s);
			@media (min-width: $mq-med) {
				background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/mossheads-2000x1350px.jpeg);
			}
		}
		li:nth-child(3) {
			background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/whitesquare-800x1200px.jpeg);
			@include animation-delay(3s);
			@media (min-width: $mq-med) {
				background-image: url(https://s3.ap-northeast-2.amazonaws.com/handshaker-theme/crystalcubes-2000x1350px.jpeg);
			}
		}
	}
	.yellow-button {
		@include animation(fade-in ease-in-out 1s 1s both);
		display: inline;
                margin: 1em auto;
                border: 1px solid $color-dark;
                border-radius: 1px;
                background-color: $color-yellow;
                font-family: Lato;
		font-style: italic;
		font-size: 0.5em;
                text-align: center;
                line-height: 0.9em;
                color: $color-dark;
                transition: ease-out 0.5s;
                width: 6em;
                height: 3em;
	}
	.yellow-button:hover {
                background-color: white;
                border: 1px solid $color-orange;
                color: $color-orange;

	}
}

